TA-4044 Fix label and textbox spacing and replace break with another styling options

--- a/client/css/ussba.css
+++ b/client/css/ussba.css
@@ -143,7 +143,13 @@ ol li:before {
   padding: 2rem;
 }
 
-.search-bar h1 {
+.search-bar label {
+  display: block;
+  padding-bottom: .375rem;
+  width: 100%;
+}
+
+.search-bar h1, .search-bar label {
   font-weight: 400;
 }
 
